--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,10 @@ ConfigParser==5.3.0
 contextlib2==21.6.0
 cryptography==40.0.2
 
+dl==0.1.0
+docutils==0.20.1
+HTMLParser==0.0.2
+ipython==8.14.0
+ipywidgets==8.0.6
+Jinja2==3.1.2
+jnius==1.1.0
