--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,17 @@ langchain==0.0.196
 lockfile==0.12.2
 mock==5.0.2
 Pillow==9.5.0
+
+protobuf==3.20.3
+pyOpenSSL==23.1.1
+pyOpenSSL==23.2.0
+railroad==0.5.0
+Sphinx==7.0.1
+streamlit==1.22.0
+tornado==6.3.2
+trove_classifiers==2023.5.24
+truststore==0.7.0
+urllib3_secure_extra==0.1.0
+xmlrpclib==1.0.1
+
+
