--- a/requirements.txt
+++ b/requirements.txt
@@ -25,9 +25,13 @@ railroad==0.5.0
 Sphinx==7.0.1
 streamlit==1.22.0
 tornado==6.3.2
-truststore==0.7.0
+trove_classifiers==2023.5.24
 urllib3_secure_extra==0.1.0
 xmlrpclib==1.0.1
+
+
+
+
 
 
 
